src/Styles/index.scss
@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,900&display=swap");

@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
  .container {
    @apply mx-auto;
    max-width: 1440px;

    @screen sm {
      max-width: 720px;
    }
  }
}

@layer components {
  .btn {
    @apply bg-blue-500 text-white font-bold px-8 py-3 rounded transition duration-500 ease-in-out;

    &:hover {
      @apply bg-blue-700 text-white font-bold rounded;
    }
  }
}

body {
  font-family: "Poppins", sans-serif;
}

// .common-btn {
//   @apply bg-blue-500 text-white font-bold px-8 py-3 rounded transition duration-500 ease-in-out;

//   &:hover {
//     @apply bg-blue-700 text-white font-bold rounded;
//   }
// }

.common-btn {
  background: linear-gradient(135deg, #2b59ff 0%, #bb2bff 100%);
  color: #fff;
  font-weight: 600;
  padding: 0.75rem 1.5rem;
  border-radius: 0.5rem;
  transition: all 0.3s ease-in-out;

  &:hover {
    background: linear-gradient(135deg, #2b59ff 0%, #bb2bff 100%);
    color: #fff;
    font-weight: 600;
  }
}

